Bug fix ansgrn boxes causing horiz scroll
the margin:-1 is used to prevent twitching when the border was removed on input,
but it was causing horiz scrollbars.  Added padding 1px to .question to compensate

IM-699

--- a/assess2/vue-src/src/assess2.css
+++ b/assess2/vue-src/src/assess2.css
@@ -343,6 +343,7 @@ input[type=text]:disabled, .mathquill-math-field.disabled {
   background-size: 20px 100%, 20px 100%, 10px 100%, 10px 100%;
   background-attachment: local, local, scroll, scroll;
   margin: 12px 0;
+  padding: 1px;
 }
 
 @media only screen and (max-width: 480px) {
